:sparkles: Introduce new features.

--- a/lampada/index.html
+++ b/lampada/index.html
@@ -19,8 +19,7 @@
     </div>
 
     <div>
-      <button class="btn" id="turnOn">Ligar</button>
-      <button class="btn" id="turnOff">Desligar</button>
+      <button class="btn" id="turnOnOff">Ligar</button>
     </div>
   </main>
   
